syntax="proto3";

package payment_service;
option go_package ="genproto/payment_service";


message HealthCheckResponse {
  bool healthy = 1;
  string un_health_level = 2;
}
